Code cleanup and improved logging

--- a/WeatherForecastAPI/appsettings.json
+++ b/WeatherForecastAPI/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"WeatherDatabase": "Server=(localdb)\\MSSQLLOCALDB;Database=WeatherDb;MultipleActiveResultSets=true"
-    "WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
-    //"WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
+    //"WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
+    "WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
   }
 }
