--- a/WeatherForecastAdmin/appsettings.json
+++ b/WeatherForecastAdmin/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  //"RabbitMqHost": "rabbit_in_dc"
-  "RabbitMqHost": "rabbit-mq"
+  "RabbitMqHost": "localhost"
+  //"RabbitMqHost": "rabbit-mq"
 }
