--- a/WeatherForecastProcessor/appsettings.json
+++ b/WeatherForecastProcessor/appsettings.json
@@ -7,10 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    //"Db": "Server=sql_in_dc;Database=carvedrock;User Id=cr_dbuser;Password=Sql1nContainersR0cks!;MultipleActiveResultSets=true;"
-    //"WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
-    "WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
+    "WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
+    //"WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
   },
-  //"RabbitMqHost": "rabbit_in_dc"
-  "RabbitMqHost": "rabbit-mq"
+  "RabbitMqHost": "localhost"
+  //"RabbitMqHost": "rabbit-mq"
 }
