--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - dockerapi-dev
 
   weatherforecast-processor:
+    container_name: 'weatherforecastprocessor'
     build:
       context: .
       dockerfile: ./WeatherForecastProcessor/Dockerfile
@@ -53,6 +54,7 @@ services:
       - dockerapi-dev
 
   weatherforecast-admin:
+    container_name: 'weatherforecastadmin'
     build:
       context: .
       dockerfile: ./WeatherForecastAdmin/Dockerfile
