--- a/WeatherForecastProcessor/appsettings.json
+++ b/WeatherForecastProcessor/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
-    //"WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
+    "WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
+    //"WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
   },
   "RabbitMqHost": "localhost"
   //"RabbitMqHost": "rabbit-mq"
