--- a/WeatherForecastAPI/appsettings.json
+++ b/WeatherForecastAPI/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
-    "WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
+    "WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
+    //"WeatherDatabase": "Host=host.docker.internal;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
   }
 }
