--- a/WeatherForecastProcessor/appsettings.json
+++ b/WeatherForecastProcessor/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
-    //"WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
+    //"WeatherDatabase": "Host=localhost;Port=5432;Database=WeatherDb;User ID=postgres;Password=PASSWORD"
+    "WeatherDatabase": "Host=weather-postgres;Port=5432;Database=WeatherDb;User ID=postgres;Password=Real$123"
   },
-  "RabbitMqHost": "localhost"
-  //"RabbitMqHost": "rabbit-mq"
+  //"RabbitMqHost": "localhost"
+  "RabbitMqHost": "rabbit-mq"
 }
